@@ -381,6 +381,7 @@
 	<path id="mod-spring-path">
 		<path refid="mod-ri-path" />
 		<pathelement path="${classes}/${mod-ri-id}" />
+		<fileset dir="${lib}/${lib-logging-id}" includes="*.jar" />
 		<fileset dir="${lib}/${lib-spring-id}" includes="*.jar" />
 	</path>
 
